--- a/src/style.scss
+++ b/src/style.scss
@@ -263,8 +263,10 @@
 
         .message {
           display: flex;
-          gap: 20px;
+          gap: 12px;
           margin-bottom: 20px;
+          // flex-direction: column;
+          align-items: flex-start; // Align items at the start
 
           .messageInfo {
             display: flex;
@@ -279,17 +281,26 @@
               object-fit: cover;
             }
           }
-          .messageContent {
-            max-width: 100%;
+
+          .messageContentContainer {
             display: flex;
             flex-direction: column;
-            gap: 10px;
+            align-items: flex-start; // Align content to the left
+            max-width: 70%;
+          }
+
+          .messageContent {
+            // max-width: 100%;
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
 
             p {
               background-color: white;
               padding: 10px 20px;
               border-radius: 0px 10px 10px 10px;
               max-width: max-content;
+              word-wrap: break-word;
             }
 
             img {
@@ -298,8 +309,20 @@
             }
           }
 
+          // New styles for the time label
+          .messageTimeLabel {
+            font-size: 12px; // Adjust font size as needed
+            color: gray; // Change color for differentiation
+            margin-top: 5px; // Space between message and time label
+            align-items: flex-start;
+          }
+
           &.owner {
             flex-direction: row-reverse;
+
+            .messageContentContainer {
+              align-items: flex-end; // Align to the right for owner messages
+            }
 
             .messageContent {
               align-items: flex-end;
@@ -310,6 +333,14 @@
                 max-width: max-content;
               }
             }
+
+            .messageTimeLabel {
+              align-self: flex-end; // Align to the right for owner messages
+            }
+          }
+
+          &.receiver {
+            flex-direction: row; // Receiver's messages align to the left
           }
         }
       }
